# lab3

src/: CMakeLists.txt  README.md
src/include/: qs.h
src/src/: primes.cpp  qs-omp.c  qs-seq.c  qs.c
